# stm32-boot-explained

./: .gitignore  CMakeLists.txt  LICENSE  README.md
drivers/: CMakeLists.txt
src/: bootloader.c  main.c
src/peripherals/: rcc.c  rcc.h  uart.c  uart.h
